--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/rybaktheprophet/goit-js-hw-08",
+  "homepage": "https://rybaktheprophet.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /https://github.com/rybaktheprophet/goit-js-hw-0/"
