--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://rybaktheprophet.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /https://github.com/rybaktheprophet/goit-js-hw-0/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
